# json-log-viewer

./: .gitignore  README.md  pyproject.toml
src/json_log_viewer/: __init__.py  __main__.py  gui.py  model.py
