[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "json-log-viewer"
version = "0.1.0"
description = "Vibe-coded GUI viewer for JSON experiment logs"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
json-log-viewer = "json_log_viewer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
